--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -47,7 +47,9 @@
         "eslint-plugin-prettier": "^4.0.0",
         "eslint-plugin-react": "^7.26.1",
         "eslint-plugin-react-hooks": "^4.2.0",
-        "prettier": "^2.4.1"
+        "prettier": "^2.4.1",
+        "eslint-plugin-svelte3": "^3.4.0",
+        "svelte": "^3.46.1"
     },
     "peerDependencies": {
         "@babel/core": "^7.15.5",
@@ -89,10 +91,5 @@
     "volta": {
         "node": "16.10.0",
         "yarn": "1.22.11"
-    },
-    "dependencies": {
-        "eslint-plugin-svelte3": "^3.4.0",
-        "svelte": "^3.46.1",
-        "svelte-check": "^2.3.0"
     }
 }
