--- a/packages/eslint-config/.eslintrc.json
+++ b/packages/eslint-config/.eslintrc.json
@@ -1,3 +1,15 @@
 {
-    "extends": "./"
+    "extends": "./",
+    "overrides": [
+        {
+            "files": ["**/*.jsx"],
+            "extends": "./react"
+        },
+        {
+            "files": [
+                "**/*.svelte"
+            ],
+            "extends": "./svelte"
+        }
+    ]
 }
